--- a/NiteRide.html
+++ b/NiteRide.html
@@ -16,7 +16,7 @@
   </head>
   <body>
       <nav class="navbar navbar-expand-lg navbar-dark" >
-        <a class="navbar-brand" href="#"> <img src="NRofficiaLogo.png" class="mr-1">NiteRide</a>
+        <a class="navbar-brand" href="#"> <img src="NRofficialLittleLogo.png" class="mr-1">NiteRide</a>
           <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link ml-10" id="tar" href="#">About</a>
@@ -37,9 +37,7 @@
             <img src="https://cdn1.venmo.com/production/images/AppStore.png">
           </a>
 
-          <a href="https://play.google.com/store/apps/details?id=com.venmo">
-            <img src="https://cdn1.venmo.com/production/images/PlayStore.png">
-          </a>
+
         </span>
           
       </div>
