Fixed broken push

--- a/NiteRide.html
+++ b/NiteRide.html
@@ -33,7 +33,7 @@
 
         <hr>
         <span class="applink">
-          <a href="https://itunes.apple.com/us/app/venmo/id351727428?mt=8">
+          <a href="https://github.com/MattReid99/hackBU-rideshare">
             <img src="https://cdn1.venmo.com/production/images/AppStore.png">
           </a>
 
